  prior to upload.
- Fixed NullPointerException in error reporting when REST service is run 
  without a network available.
- Added property setting "httpclient.connection-manager-timeout" which allows
  users to specify a timeout when an S3 operation is waiting for a connection
  to become available in the HttpClient connection pool. The default setting
  of 0 means wait indefinitely.

KUDOS TO:

Christian Mallwitz for informing us of the %~dp0 script variable that greatly
improves the Windows batch scripts. 

Jawahar Lal Nayak for:
- a patch that contributed to the new TargetGrants support for logged 
  S3 buckets.
- bug report about the NPE error condition when the REST implementation is
  run on a machine without a network connection available.

Benjamin Schmaus for patches to configure the REST connection pool timeout, 
and to make HTTP response headers available for failed REST connections via 
S3ServiceExceptions.

-------------
Version 0.7.1
-------------

COCKPIT
- Fixed a menu display bug that caused the bucket and object action menus to 
  appear behind other GUI elements on some Windows systems.
- The Logging Status settings of CloudFront distributions can now be managed
  within the CloudFront Distributions dialog box (see the Tools menu).
- New "Switch login" Service menu item allows uses with multiple S3 accounts
  to quickly switch between them, once the initial log in has been performed.

TOOLKIT

  * General

- Added support for JMX instrumentation of S3Service functions. To enable
  JMX set the system property "com.sun.management.jmxremote". Instrumentation
  for S3Bucket and S3Object MBeans is disabled by default, to enable this
  reporting set the following system properties to "true": 
  "jets3t.bucket.mx", "jets3t.object.mx"
- Added simplified constructors for S3Object, so the object's bucket need
  not be specified in advance. This is most useful when uploading data.